<resources>
    <string name="app_name">Nmedia</string>
    <string name="post_menu">Post menu</string>
    <string name="post_avatar">Post avatar</string>
    <string name="icon_favorite" translatable="false">Icon favorite</string>
    <string name="icon_share" translatable="false">Icon share</string>
    <string name="icon_visibility" translatable="false">Icon visibility</string>
    <string name="end_line">End line</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_cancel">Cancel</string>
    <string name="chooser_share_post">Share post</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="play_video">Play video</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_other">Hi from Nmedia! Come in, we missed you!</string>
    <string name="notification_post_published">User %1$s published new post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="server_error">"Server error"</string>
    <string name="network_error">"Network error"</string>
    <string name="unknown_error">"Unknown error"</string>
    <string name="attachment">Attachment</string>
    <string name="get_new_post">Get new post</string>
    <string name="add_post">Add new post</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_for_user" translatable="false">User with id: %1$s get notification: %2$s</string>
    <string name="ad_description">ad</string>
</resources>